# 61-GovOps

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude-memory/: MEMORY.md  README.md  feedback_disclaimer_load_bearing.md  feedback_pre_commit_pytest_gate.md  project_open_followups.md  project_v2_1_hosted_demo.md  project_v2_1_smoke_test_2026-04-29.md  project_v3_shipped_2026-04-30.md  reference_remotes.md
.github/: copilot-instructions.md  pull_request_template.md
docker/: api.Dockerfile  web.Dockerfile
docs/: IDEA-GovOps-v2.0-LawAsCode.md  IDEA-GovOps-v3.0-ProgramAsPrimitive.md  aligned-initiatives.md  d3pdca-handover.md  govops-002-shell.md  govops-003-config-search.md  govops-004-config-timeline.md  govops-005-config-diff.md  govops-006-config-draft-form.md  govops-007-config-approval.md  govops-008-prompt-admin.md  govops-009-cases.md  govops-010-authority.md  govops-011-encoder.md  govops-012-admin-dashboard.md  govops-013-polish-fixes.md  govops-014-citation-impact.md  govops-014a-row-reuse.md  govops-015-self-screening.md  govops-015a-self-screening-polish.md  govops-015b-screen-privacy-fix.md  govops-016-about-rebuild.md  govops-016a-repo-base-finalization.md  govops-017-benefit-amount-card.md  govops-019-case-event-timeline.md  govops-021-mock-federation-cleanup.md  govops-022-howto-url-as-configvalue.md  govops-023-ssr-head-coverage.md  govops-design-tokens.json  govops-handoff-protocol.md  index.html  (+1 more)
(+354 files in other folders)
